@@ -4,6 +4,7 @@ Features:
 - [#5653] Add a configuration for PDF rendering of the manual
 
 Bug fixes:
+- [#5668] 1:n associations also load deleted models
 - [#5411] Test failure if no FE user records are in the DB
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
